Genesis/registro de agentes

--- a/src/static/templates/backoffice/layouts/backoffice.layout.html
+++ b/src/static/templates/backoffice/layouts/backoffice.layout.html
@@ -100,6 +100,7 @@
 
     <!-- Scripts -->
     <script src="{% static 'js/bundle.dist.js' %}"></script>
+    <script src="{% static 'js/main.js' %}"></script>
     {% block scripts %}
     {% endblock scripts %}
 </body>
