--- a/src/static/templates/ecommerce/agents.html
+++ b/src/static/templates/ecommerce/agents.html
@@ -6,28 +6,16 @@
 
 {% include './includes/header.html' with seccion="AGENTES" %}
 
-<!-- <style type="text/css">
-    @font-face {
-        font-family: "My Custom Font";
-        src: url({'static_root/fonts/LibreBaskerville-Bold.tff'}) format("truetype");
-    }
-    p.customfont { 
-        font-family: "My Custom Font", Verdana, Tahoma;
-    }
-</style> 
-<p class="customfont">Hello world!</p> -->
-
-
 <div class="container" style="margin-top: 5%; margin-bottom: 5%;">
     <div class="row" style="margin-top: 3%; margin-bottom: 3%;">
         
         {% for agente in object_list %}
             
         <div class="col-md-4">
-            <img class="img-responsive" src="{% static 'ecommerce/img/img-agente.png' %}">
-            <h1 style="font-size: 20pt;">{{agente}}</h1>
+            <img class="img-responsive" src="{{agente.foto.url}}">
+            <h1 style="font-size: 20pt;">{{agente.user}}</h1>
             <p style="text-align: justify;">{{agente.texto}}</p>
-            <p><span style="color: #486600"><i class="far fa-envelope"></i></span>    {{agente.correo}}</p>
+            <p><span style="color: #486600"><i class="far fa-envelope"></i></span>    {{agente.user.email}}</p>
             <div align="right" style="margin: 3% 0;">
                 <a href="" class="btn clear-button"> VER PERIL</a>
             </div>
