--- a/src/static/templates/ecommerce/home.html
+++ b/src/static/templates/ecommerce/home.html
@@ -318,7 +318,7 @@
 
 <!-- end Propiedades -->
 
-
+<!-- Agentes -->
 <div class="agentes" style="background: url('static/ecommerce/img/patron-agentes.png'); background-size: cover;">
     <h1>CONOCE A NUESTROS AGENTES</h1>
     <div class="container">
@@ -327,12 +327,12 @@
     <div class="container" style="margin-top: 5%; margin-bottom: 5%;">
         <div class="row" style="margin-top: 3%; margin-bottom: 3%;">
             
-            {% for i in 'que' %}
+            {% for agente in agentes %}
                 <div class="col-md-4">
-                    <img class="img-responsive" src="{% static 'ecommerce/img/img-agente.png' %}">
-                    <h1 style="font-size: 20pt;">Bernardo</h1>
-                    <p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin at elit et massa aliquam faucibus et non urna. Praesent ac justo vitae tellus placerat pellentesque.</p>
-                    <p><i class="far fa-envelope"></i>    agente@caterra.com.mx</p>
+                    <img class="img-responsive" src="{{agente.foto.url}}">
+                    <h1 style="font-size: 20pt;">{{agente.user}}</h1>
+                    <p style="text-align: justify;">{{agente.texto}}</p>
+                    <p><i class="far fa-envelope"></i>    {{agente.user.email}}</p>
                     <div align="right" style="margin: 3% 0;">
                         <a href="" class="btn clear-button">VER PERFIL</a>
                     </div>
@@ -347,29 +347,7 @@
 
     </div>
 </div>
-
-
-
-
-<!-- ssl section -->
-<!-- <div id="ssl_section_back">
-    <section class="ssl-section">
-        <img class="ssl-belt" src="{% static 'backoffice/img/ssl-toolbelt.svg' %}" alt="">
-    </section>
-</div> -->
-<!-- end of ssl section -->
-<!-- brands section -->
-<!-- <div id="brands_section_back">
-    <section class="brands-section">
-        <ul>
-            <li class="brand-section__item"><img src="{% static 'backoffice/img/marca1.png' %}" alt=""></li>
-            <li class="brand-section__item"><img src="{% static 'backoffice/img/marca2.png' %}" alt=""></li>
-            <li class="brand-section__item"><img src="{% static 'backoffice/img/marca3.png' %}" alt=""></li>
-            <li class="brand-section__item"><img src="{% static 'backoffice/img/marca4.png' %}" alt=""></li>
-        </ul>
-    </section>
-</div> -->
-<!-- end of brands section -->
+<!-- end Agentes -->
 
 {% endblock content %}
 
