--- a/src/static/css/bundle.dist.css
+++ b/src/static/css/bundle.dist.css
@@ -22013,13 +22013,20 @@ input:focus,
 }
 
 .main-header__logo > a > img {
-  width: 60px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80px;
+  padding:3%
 }
 
-.main-header__logo > img {
-  width:95px;
-  text-align:center;
-}
+ /* .main-header__logo > img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 60%;
+  padding:3%
+}  */
 
 .main-header__user-menu > a > img {
   width: 80px;
@@ -22049,6 +22056,9 @@ input:focus,
   font-size: 14px;
 }
 
+.sidebar-item a img{
+  width: 50px;
+}
 
 #sidemenu {
   background-color: #66932f;
@@ -22061,6 +22071,7 @@ input:focus,
   align-items: center;
   display: flex;
   margin-bottom: 20px;
+  padding:3%;
 }
 
 .side-menu__logo {
@@ -23215,6 +23226,13 @@ article.post {
   width: 100%;
 }
 
+.page_title{
+  margin-bottom: 0.5rem;
+  font-family: inherit;
+  font-weight: 700;
+  line-height: 1.2;
+  color: inherit;
+}
 .product {
   border: 1px solid #c3c3c3;
   box-sizing: border-box;
