--- a/src/static/templates/backoffice/layouts/backofficelayout.html
+++ b/src/static/templates/backoffice/layouts/backofficelayout.html
@@ -48,19 +48,20 @@
                 <div class="navbar-header" data-logobg="skin5">
                     <!-- This is for the sidebar toggle which is visible on mobile only -->
                     <a class="nav-toggler waves-effect waves-light d-block d-md-none" href="javascript:void(0)"><i class="ti-menu ti-close"></i></a>
+                    <div class="main-header__logo">
+                        <a href=""><img src="{% static 'img/ic-11.png' %}" alt="Caterra Logo"></a>
+                    </div>
                     <!-- ============================================================== -->
                     <!-- Logo -->
                     <!-- ============================================================== -->
-                    <a class="navbar-brand" href="">
-                        <!-- <b class="logo-icon"> -->
-                            <div class="main-header__logo">
-                                <img src="{% static 'img/ic-11.png' %}" alt="homepage" class="light-logo" />
-                            </div>
-                            <!-- <img src="../../assets/images/logo-text.png" alt="homepage" class="light-logo" /> -->
-                            
+                    <!-- <a class="navbar-brand" href=""> -->
+                        <!-- <b class="logo-icon p-l-10"> -->
+                            <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
+                            <!-- Dark Logo icon -->
+                            <!-- <img src="{% static 'img/ic-11.png' %}" alt="homepage" class="light-logo" /> -->
                         <!-- </b> -->
                         <!--End Logo icon -->
-                    </a>
+                    <!-- </a> -->
                     <!-- ============================================================== -->
                     <!-- End Logo -->
                     <!-- ============================================================== -->
@@ -144,9 +145,9 @@
                 <nav class="sidebar-nav">
                     <ul id="sidebarnav" class="p-t-30">
                         <section class="side-menu__user-info">
-                            <!-- <div class="side-menu__logo">
+                            <div class="side-menu__logo">
                                 <img src="{% static 'img/ic-13.png' %}" alt="User avatar">
-                            </div> -->
+                            </div>
                             <div class="side-menu__username">
                                 <p>{{ user }}</p>
                                 <h5>
@@ -215,7 +216,7 @@
             <div class="page-breadcrumb">
                 <div class="row">
                     <div class="col-12 d-flex no-block align-items-center">
-                        <h4 class="page_title">Dashboard</h4>
+                        <h4 class="page_title">{{ title|default:"Caterra" }}</h4>
                         <!-- <div class="ml-auto text-right">
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
