--- a/src/static/templates/backoffice/propiedades/create.html
+++ b/src/static/templates/backoffice/propiedades/create.html
@@ -1,33 +1,248 @@
 {% extends 'backoffice/layouts/backofficelayout.html' %}
+{% load static %}
 
 {% block content %}
 
-<form class="slider-form" action="{% url 'backoffice:propiedades_create' %}" method="POST" enctype="multipart/form-data">
-    {% csrf_token %}
+<!-- <form class="slider-form" action="{% url 'backoffice:propiedades_create' %}" method="POST" enctype="multipart/form-data"> -->
 
-    {% if form.errors %}
-    {% for key,value in form.errors.items %}
-    <div class="login-form__alert" role="alert">
-        <p>{{key}}: {{ value }}</p>
+    <div class="container-fluid">
+        <div class="card">
+            <div class="card-body wizard-content">
+                <!-- <h4 class="card-title"></h4> -->
+                <!-- <h6 class="card-subtitle"></h6> -->
+                <form id="example-form" action="{% url 'backoffice:propiedades_create' %}" method="POST" enctype="multipart/form-data" class="m-t-40">
+                    {% csrf_token %}
+
+                    {% if form.errors %}
+                    {% for key,value in form.errors.items %}
+                    <div class="login-form__alert" role="alert">
+                        <p>{{key}}: {{ value }}</p>
+                    </div>
+                
+                    {% endfor %}
+                    {% endif %}
+                
+                    {% if messages %}
+                    <ul class="login-form__alert" role="alert">
+                        {% for message in messages %}
+                        <li>{{message}}</li>
+                        {% endfor %}
+                    </ul>
+                    {% endif %}
+                    <div>
+                        <h3>Nueva Propiedad</h3>
+                        <section>
+                            <p class="fieldp">
+                                <label>Nombre:</label>
+                                {{form.nombre}}
+                            </p>
+                            <p class="fieldp">
+                                <label>Imagen:</label>
+                                {{form.imagen}}
+                            </p>
+                            <p class="fieldp">
+                                <label>Inmueble:</label>
+                                {{form.tipo_inmueble}}
+                            </p>
+                            <p class="fieldp">
+                                <label>Operacion:</label>
+                                {{form.tipo_operacion}}
+                            </p>                            
+                            <p class="fieldp">
+                                <label>Estado de Conservacion:</label>
+                                {{form.estado_conservacion}}
+                            </p>
+                            <p class="fieldp">
+                                <label>Instalaciones Especiales:</label>
+                                {{form.instalaciones_especiales}}
+                            </p>
+
+                        </section>
+                        <h3>Información de Propiedad</h3>
+                        <section>
+                            <p class="fieldp">
+                                <label>Dirección:</label>
+                                {{form.direccion}}
+                            </p>
+                            <div class="row fieldp">
+                                <div class="col-sm">
+                                    <label>Colonia:</label>
+                                    {{form.colonia}}
+                                </div>
+                                <div class="col-sm"> 
+                                    <label>Ciudad/Municipio:</label>
+                                    {{form.ciudad}}
+                                </div>
+                            </div>
+                            <div class="row fieldp">
+                                <div class="col-sm">
+                                    <label>Estado:</label>
+                                    {{form.estado}}
+                                </div>
+                                <div class="col-sm"> 
+                                    <label>C.P.:</label>
+                                    {{form.cp}}
+                                </div>
+                            </div>
+                            <div class="row fieldp">
+                                <div class="col-sm">
+                                    <label>Calle 1:</label>
+                                    {{form.entre_calle_1}}
+                                </div>
+                                <div class="col-sm"> 
+                                    <label>Calle 2:</label>
+                                    {{form.entre_calle_2}}
+                                </div>
+                            </div>
+                            <div class="row fieldp">
+                                <div class="col-sm">
+                                    <label>Clave:</label>
+                                    {{form.clave}}
+                                </div>
+                                <div class="col-sm"> 
+                                    <label>Capatada por:</label>
+                                    {{form.captada_por}}
+                                </div>
+                            </div>
+                            <!-- Construccion, terreno, frente y fondo -->
+                            <div class="row fieldp">
+                                <div class="col-sm">
+                                    <label>Construcción (m2):</label>
+                                    {{form.construccion}}
+                                </div>
+                                <div class="col-sm"> 
+                                    <label>Terreno (m2):</label>
+                                    {{form.terreno}}
+                                </div>
+                                <div class="col-sm"> 
+                                    <label>Frente:</label>
+                                    {{form.frente}}
+                                </div>
+                                <div class="col-sm"> 
+                                    <label>Fondo:</label>
+                                    {{form.fondo}}
+                                </div>
+                            </div>
+                            <!-- Precio, moneda, mantenimiento mensual -->
+                            <div class="row fieldp">
+                                <div class="col-sm">
+                                    <label>Precio:</label>
+                                    {{form.precio}}
+                                </div>
+                                <div class="col-sm"> 
+                                    <label>Moneda:</label>
+                                    {{form.moneda}}
+                                </div>
+                                <div class="col-sm"> 
+                                    <label>Mantenimiento Mensual:</label>
+                                    {{form.mantenimiento_mensual}}
+                                </div>
+                            </div>
+                        </section>
+                        <h3>Características de Propiedad</h3>
+                        <section>
+                            <label>Cubículos:</label>
+                            {{form.cubiculos}}
+                            <label>Áreas de Trabajo:</label>
+                            {{form.areas_trabajo}}
+                            <label>Baños:</label>
+                            {{form.banos}}
+                            <label>Sala de Juntas:</label>
+                            {{form.sala_juntas}}
+                            <label>Sala de Espera:</label>
+                            {{form.sala_espera}}
+                            <label>Comedor:</label>
+                            {{form.comedor}}
+                            <label>Cocineta:</label>
+                            {{form.cocineta}}
+                            <label>Líneas Telefónicas:</label>
+                            {{form.lineas_telefonicas}}
+                            <label>Elevador:</label>
+                            {{form.elevador}}
+                        </section>
+                        <h3>Informacion de propietario</h3>
+                        <section>
+                            <label>Nombre:</label>
+                            {{form.prop_nombre}}
+                            <label>Dirección:</label>
+                            {{form.prop_direccion}}
+                            <!-- colonia cp -->
+                            <div class="row fieldp">
+                                <div class="col-sm">
+                                    <label>Colonia:</label>
+                                    {{form.prop_colonia}}
+                                </div>
+                                <div class="col-sm"> 
+                                    <label>C.P.:</label>
+                                    {{form.prop_cp}}
+                                </div>
+                            </div>
+                            <label>Ciudad/Municipio:</label>
+                            {{form.prop_ciudad}}
+
+                            <label>Teléfono:</label>
+                            {{form.prop_telefono}}
+                            <!-- cita y llaves -->
+                            <div class="row fieldp">
+                                <div class="col-sm">
+                                    <label>Cita:</label>
+                                    {{form.prop_cita}}
+                                </div>
+                                <div class="col-sm"> 
+                                    <label>Llaves:</label>
+                                    {{form.prop_llaves}}
+                                </div>
+                            </div>
+                            <!-- cita con y horario telefono -->
+                            <label>Horario:</label>
+                            {{form.prop_horario}}
+                            <!-- <input id="acceptTerms" name="acceptTerms" type="checkbox" class="required"> -->
+                        </section>
+                        <!-- <div class="form-group__actions">
+                            <button class="btn btn-success" type="submit">Guardar</button>
+                            <a class="btn btn-danger" href="{% url 'backoffice:propiedades' %}">Cancelar</a>
+                        </div> -->
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
 
-    {% endfor %}
-    {% endif %}
 
-    {% if messages %}
-    <ul class="login-form__alert" role="alert">
-        {% for message in messages %}
-        <li>{{message}}</li>
-        {% endfor %}
-    </ul>
-    {% endif %}
 
-        {{form.as_p}}
-
-    <div class="form-group__actions">
-        <button class="btn btn-success" type="submit">Guardar</button>
-        <a class="btn btn-danger" href="{% url 'backoffice:propiedades' %}">Cancelar</a>
-    </div>
-</form>
-
-{%endblock%}
+ <!-- </form> -->
+{% endblock content %}
+{% block scripts %}
+    <script src="{% static 'assets/libs/jquery-steps/build/jquery.steps.min.js' %}"></script>
+    <script src="{% static 'assets/libs/jquery-validation/dist/jquery.validate.min.js' %}"></script>
+    <script>
+        // Basic Example with form
+    var form = $("#example-form");
+    form.validate({
+        errorPlacement: function errorPlacement(error, element) { element.before(error); },
+        rules: {
+            confirm: {
+                equalTo: "#password"
+            }
+        }
+    });
+    form.children("div").steps({
+        headerTag: "h3",
+        bodyTag: "section",
+        transitionEffect: "slideLeft",
+        onStepChanging: function(event, currentIndex, newIndex) {
+            form.validate().settings.ignore = ":disabled,:hidden";
+            return form.valid();
+        },
+        onFinishing: function(event, currentIndex) {
+            form.validate().settings.ignore = ":disabled";
+            return form.valid();
+        },
+        
+        onFinished: function(event, currentIndex) {
+            alert("Submitted!");
+            // window.location = "{% url 'backoffice:propiedades' %}";
+        }
+    });
+    </script>
+{% endblock scripts %}
