Genesis/perfil del agente

--- a/src/static/templates/backoffice/layouts/backofficelayout.html
+++ b/src/static/templates/backoffice/layouts/backofficelayout.html
@@ -30,6 +30,11 @@
 <![endif]-->
     <!-- Styles -->
     <link href="{% static 'css/bundle.dist.css' %}" rel="stylesheet">
+    
+    {% block estilos-adicionales %}
+        
+    {% endblock estilos-adicionales %}
+        
 </head>
 
 <body>
