--- a/src/static/templates/backoffice/users/user-confirm-delete.html
+++ b/src/static/templates/backoffice/users/user-confirm-delete.html
@@ -1,7 +1,9 @@
-{% extends 'backoffice/layouts/backofficelayout.html' %} {% block content %}
+{% extends 'backoffice/layouts/backofficelayout.html' %}
+{% load humanize %}
+{% block content %}
 <form method="post" class="bo-delete-form">
     {% csrf_token %}
-    <h3>¿Estás seguro que deseas eliminar "{{ object }}"?</h3>
+    <h3>¿Estás seguro que deseas eliminar "{{ object|title }}"?</h3>
     <button class="btn btn-danger text-xs" type="submit" value="Confirmar">
         Confirmar
     </button>
