--- a/src/static/templates/backoffice/agentes/details.html
+++ b/src/static/templates/backoffice/agentes/details.html
@@ -27,6 +27,16 @@
             <td>{{ user.type }}</td>
         </tr>
         <tr>
+            <td>Imagen:</td>
+            <td>
+                <img width="100px" src="{{user.agente.foto.url}}" alt="">
+            </td>
+        </tr>
+        <tr>
+            <td>Texto:</td>
+            <td>{{ user.agente.texto }}</td>
+        </tr>
+        <tr>
             <td>Fecha de creación:</td>
             <td>{{ user.created_at }}</td>
         </tr>
@@ -38,7 +48,7 @@
 </table>
 <div class="form-group__actions">
     <button class="btn btn-success" type="submit">Regresar</button>
-    <a class="btn btn-info" href="{% url 'backoffice:users_update' user.id %}"
+    <a class="btn btn-info" href="{% url 'backoffice:agentes_update' user.id %}"
         >Editar</a
     >
 </div>
