--- a/src/static/templates/backoffice/agentes/update.html
+++ b/src/static/templates/backoffice/agentes/update.html
@@ -23,7 +23,51 @@
     </ul>
     {% endif %}
 
-    {{form.as_p}}
+    <div class="form-group row">
+        <div class="col-sm-12">
+            {{form.first_name}}
+        </div>
+    </div>
+    <div class="form-group row">
+        <div class="col-sm-12">
+            {{form.first_surname}}
+        </div>
+    </div>
+    <div class="form-group row">
+        <div class="col-sm-12">
+            {{form.last_surname}}
+        </div>
+    </div>
+    <div class="form-group row">
+        <div class="col-sm-12">
+            {{form.email}}
+        </div>
+    </div>
+    <div class="form-group row">
+        <div class="col-sm-12">
+            {{form.phone}}
+        </div>
+    </div>
+    {{form.type}}
+    <div class="form-group">
+        <div class="col-md-12">
+            <label for="">Foto actual: </label>
+            <div style="width: 100px;">
+                <img src="{{object.agente.foto.url}}" alt="foto de {{object}}">
+            </div>
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-md-12">
+            <label for="">Modificar foto: </label>
+            {{agente_form.foto}}
+        </div>
+    </div>
+    <div class="form-group row">
+        <div class="col-sm-12">
+            <textarea name="texto" cols="40" rows="10" placeholder="Escribe tu mensaje aquí..." maxlength="1000" id="id_texto">{{object.agente.texto}}</textarea>
+        </div>
+    </div>
     
     <div class="form-group__actions">
         <button class="btn btn-success" type="submit">Guardar</button>
@@ -33,10 +77,10 @@
 {% endblock content %}
 
 {% block scripts %}
-<script src="{% static 'vendor/tinymce/js/tinymce/tinymce.min.js' %}" referrerpolicy="origin"></script>
+<script src="{% static 'assets/libs/inputmask/dist/min/jquery.inputmask.bundle.min.js' %}"></script>
+<script src="{% static 'dist/js/pages/mask/mask.init.js' %}"></script>
 <script>
-    tinymce.init({
-        selector: 'textarea'
-    });
+    $('#id_type').hide()
+    $('#id_type option[value="AGENTE"]').prop('selected', true);
 </script>
 {% endblock %}
