--- a/src/static/templates/backoffice/users/update.html
+++ b/src/static/templates/backoffice/users/update.html
@@ -39,7 +39,7 @@
     </div>
     <div class="form-group">
         <label for="phone">{{form.phone.label}}</label>
-        <input type="phone" name="phone" id="phone" value="{{object.phone|default:""}}">
+        <input type="phone" name="phone" id="phone" value="{{object.phone|default:''}}">
     </div>
     <div class="form-group">
         <label for="type">{{form.type.label}}</label>
