--- a/src/static/templates/ecommerce/home.html
+++ b/src/static/templates/ecommerce/home.html
@@ -5,6 +5,22 @@
 
 {% block estilos-adicionales %}
 <link rel="stylesheet" href="{% static 'css/ecommerce/home.css' %}">
+<style>
+
+    .img-container{
+        height: 400px;
+        width: 380px;
+    }
+
+    .img-containter img{
+        height: 100%;
+        width: auto;
+    }
+
+    .texto{
+        height: 80px;
+    }
+</style>
 {% endblock estilos-adicionales %}
 
 
@@ -328,15 +344,28 @@
         <div class="row" style="margin-top: 3%; margin-bottom: 3%;">
             
             {% for agente in agentes %}
-                <div class="col-md-4">
-                    <img class="img-responsive" src="{{agente.foto.url}}">
-                    <h1 style="font-size: 20pt;">{{agente.user}}</h1>
-                    <p style="text-align: justify;">{{agente.texto}}</p>
-                    <p><i class="far fa-envelope"></i>    {{agente.user.email}}</p>
-                    <div align="right" style="margin: 3% 0;">
-                        <a href="" class="btn clear-button">VER PERFIL</a>
+            <div class="col-md-4">
+                <div class="row">
+                    <div class="col-lg-12 d-flex justify-content-center">
+                        <div class="img-container d-flex justify-content-center">
+                            <img src="{{agente.foto.url}}">
+                        </div>
                     </div>
-                </div>                
+                    <div class="col-lg-12">
+                        <br>
+                        <h1 style="font-size: 20pt;">{{agente.user|title}}</h1>
+                        <br>
+                        <div class="texto">
+                            <p style="text-align: justify;">{{agente.texto|truncatechars:210}}</p>
+                        </div>
+                        <br>
+                        <p><span style="color: #486600"><i class="far fa-envelope"></i></span>    {{agente.user.email}}</p>
+                        <div align="right" style="margin: 3% 0;">
+                            <a href="{% url 'ecommerce:agent_profile' agente.id %}" class="btn clear-button"> VER PERIL</a>
+                        </div>
+                    </div>
+                </div>
+            </div>               
             {% endfor %}
                 
         </div>
