usuarios tabla y form propiedades

--- a/src/static/templates/backoffice/propiedades/create.html
+++ b/src/static/templates/backoffice/propiedades/create.html
@@ -42,6 +42,7 @@
                             </p>
                             <p class="fieldp">
                                 <label>Inmueble:</label>
+                                {{form.boolean}}
                                 {{form.tipo_inmueble}}
                             </p>
                             <p class="fieldp">
