Genesis/formulario de propiedades

--- a/src/static/assets/libs/jquery-steps/steps.css
+++ b/src/static/assets/libs/jquery-steps/steps.css
@@ -177,7 +177,7 @@ File: css
 }
 
 .wizard-content .wizard>.actions>ul>li>a {
-    background: #2962FF ;
+    background: #486600 ;
     color: #fff;
     display: block;
     padding: 7px 12px;
