--- a/src/static/templates/ecommerce/agent-profile.html
+++ b/src/static/templates/ecommerce/agent-profile.html
@@ -31,12 +31,11 @@
 <div class="agente-container">
     <div class="container">
         <div class="row">
-            <div class="col-lg-2">
+            <div class="col-lg-2 d-flex justify-content-center">
                 <img  class="img-agente" src="{{object.foto.url}}" alt="">
-
             </div>
-            <div class="col-lg-10">
-                <div class="txt-agente">
+            <div class="col-lg-10 text-lg-left text-center">
+                <div class="txt-agente text-lg-left text-center">
                     {{object.texto}}
                 </div>
                 <br>
