--- a/src/static/assets/libs/jquery-steps/jquery.steps.css
+++ b/src/static/assets/libs/jquery-steps/jquery.steps.css
@@ -116,7 +116,7 @@
 .wizard > .steps .current a:hover,
 .wizard > .steps .current a:active
 {
-    background: #2962FF;
+    background: #486600;
     color: #fff;
     cursor: default;
 }
@@ -125,7 +125,7 @@
 .wizard > .steps .done a:hover,
 .wizard > .steps .done a:active
 {
-    background: #9dc8e2;
+    background: #71a100;
     color: #fff;
 }
 
